updating to 1.19.2 and updated dependencies